--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -10,6 +10,8 @@
   height: 36px;
   font-size: 12px;
   line-height: 15px;
+  font-weight: 500;
+  font-style: normal;
   margin: 50px auto 0;
   text-align: center;
   background-color: #2F2F2F;
