--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -7,6 +7,7 @@
   line-height: 20px;
   color: #8B8B8B;
   font-weight: normal;
+  font-style: normal;
   margin: 0 0 30px;
 }
 
@@ -33,6 +34,7 @@
   font-size: 30px;
   line-height: 50px;
   font-weight: normal;
+  font-style: normal;
   margin: 0;
 }
 
