--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -5,6 +5,8 @@
 .about-me__title {
   font-size: 22px;
   line-height: 27px;
+  font-style: normal;
+  font-weight: normal;
   margin: 0;
   padding-bottom: 23px;
   border-bottom: 1px solid #a09999;
@@ -28,6 +30,7 @@
   font-size: 50px;
   line-height: 58px;
   font-weight: normal;
+  font-weight: normal;
   margin: 0;
 }
 
@@ -35,7 +38,8 @@
   font-size: 18px;
   line-height: 20px;
   margin: 18px 0 26px;
-  font-weight: normal;
+  font-weight: 500;
+  font-style: normal;
 }
 
 .about-me__info {
@@ -43,6 +47,8 @@
   line-height: 22px;
   margin: 0;
   max-width: 600px;
+  font-style: normal;
+  font-weight: normal;
 }
 
 .about-me__links {
@@ -52,6 +58,8 @@
 .about-me__link {
   font-size: 14px;
   line-height: 17px;
+  font-style: normal;
+  font-weight: 500;
   margin: 0 20px 0 0;
   color: white;
   text-decoration: none;
