--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -5,6 +5,8 @@
   font-size: 13px;
   line-height: 15.73px;
   padding: 79px 70px 20px;
+  font-style: normal;
+  font-weight: normal;
 }
 
 .footer__title {
