--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -19,6 +19,8 @@
   min-width: 750px;
   font-size: 28px;
   line-height: 34px;
+  font-weight: 500;
+  font-style: normal;
   background-color: #202020;
   border: none;
   text-align: center;
