--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -14,18 +14,23 @@
   border-bottom: 1px solid #DADADA;
   width: 100%;
   font-weight: normal;
+  font-style: normal;
 }
 
 .techs__subtitle {
   margin: 90px 0 26px;
   font-size: 50px;
   line-height: 58px;
+  font-weight: normal;
+  font-style: normal;
 }
 
 .techs__text {
   margin: 0 0 100px;
   font-size: 14px;
   line-height: 20px;
+  font-weight: normal;
+  font-style: normal;
   max-width: 500px;
   text-align: center;
 }
@@ -41,6 +46,8 @@
   padding: 21px 0;
   font-size: 14px;
   line-height: 17px;
+  font-weight: normal;
+  font-style: normal;
   width: 90px;
   border-radius: 10px;
   background-color: #303030;
