--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -48,13 +48,6 @@
   color: white;
 }
 
-.profile__buttons {
-  padding-top: 220px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .profile__button {
   background-color: #202020;
   border: none;
@@ -63,17 +56,18 @@
   font-weight: normal;
   font-size: 13px;
   line-height: 16px;
-  margin: 0 0 16px;
+  margin: 0;
+  padding: 0;
   cursor: pointer;
   transition: .3s linear;
 }
 
-.profile__button:last-of-type {
-  margin: 0;
-}
-
 .profile__button:hover {
   opacity: .6;
+}
+
+.profile__edit {
+  margin: 220px 0 16px;
 }
 
 .profile__logout {
@@ -86,12 +80,12 @@
     padding: 236px 0 30px;
   }
 
-  .profile__buttons {
-    padding-top: 210px;
-  }
-
   .profile__title {
     margin: 0 0 96px;
+  }
+
+  .profile__edit {
+    margin: 210px 0 16px;
   }
 }
 
@@ -104,10 +98,6 @@
     width: 260px;
   }
 
-  .profile__buttons {
-    padding-top: 379px;
-  }
-
   .profile__title {
     margin: 0 0 80px;
   }
@@ -115,5 +105,9 @@
   .profile__button {
     font-size: 12px;
     line-height: 15px;
+  }
+
+  .profile__edit {
+    margin: 379px 0 16px;
   }
 }
