--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -55,6 +55,16 @@
   color: white;
 }
 
+.sign__input-error {
+  margin: 6px 0 0;
+  padding: 0;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 10px;
+  line-height: 12px;
+  color: #EE3465;
+}
+
 .sign__button {
   width: 100%;
   padding: 13px 0 15px;
@@ -69,6 +79,10 @@
   margin: 152px 0 16px;
   cursor: pointer;
   transition: .3s linear;
+}
+
+.sign__button_disabled {
+  background-color: #272727;
 }
 
 .sign__button:hover {
