--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -41,6 +41,7 @@
   margin: 0 0 24px;
   color: #8B8B8B;
   padding: 0 0 10px;
+  position: relative;
 }
 
 .sign__input {
@@ -56,13 +57,15 @@
 }
 
 .sign__input-error {
-  margin: 6px 0 0;
-  padding: 0;
   font-style: normal;
   font-weight: normal;
   font-size: 10px;
   line-height: 12px;
   color: #EE3465;
+  position: absolute;
+  left: 0;
+  top: 47px;
+  width: 100%;
 }
 
 .sign__button {
