--- a/src/components/Login/Login.css
+++ b/src/components/Login/Login.css
@@ -41,6 +41,7 @@
   margin: 0 0 24px;
   color: #8B8B8B;
   padding: 0 0 10px;
+  position: relative;
 }
 
 .sign__input {
@@ -53,6 +54,18 @@
   line-height: 17px;
   margin: 5px 0 0;
   color: white;
+}
+
+.sign__input-error {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 10px;
+  line-height: 12px;
+  color: #EE3465;
+  position: absolute;
+  left: 0;
+  top: 47px;
+  width: 100%;
 }
 
 .sign__button {
@@ -69,6 +82,10 @@
   margin: 152px 0 16px;
   cursor: pointer;
   transition: .3s linear;
+}
+
+.sign__button_disabled {
+  opacity: .6;
 }
 
 .sign__button:hover {
@@ -103,6 +120,10 @@
 
 .sign__link:hover {
   opacity: .6;
+}
+
+input:-webkit-autofill {
+  transition: all 5000s ease-in-out 0s;
 }
 
 @media screen and (max-width: 440px) {
