--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -85,7 +85,7 @@
 }
 
 .sign__button_disabled {
-  background-color: #272727;
+  opacity: .6;
 }
 
 .sign__button:hover {
@@ -120,6 +120,10 @@
 
 .sign__link:hover {
   opacity: .6;
+}
+
+input:-webkit-autofill {
+  transition: all 5000s ease-in-out 0s;
 }
 
 @media screen and (max-width: 440px) {
